--- a/src/styles/scss/_jumbo.scss
+++ b/src/styles/scss/_jumbo.scss
@@ -6,7 +6,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 
     .plainText.description{
