--- a/src/styles/scss/_media.scss
+++ b/src/styles/scss/_media.scss
@@ -224,6 +224,9 @@
         }
 
         .navList.dropdown{
+
+            margin-top: 0;
+            
             .dropBtn{
                 font-size: 2rem;
             }
